--- a/CSETWebNg/src/app/layout/tsa-layout-main/tsa-layout-main.component.scss
+++ b/CSETWebNg/src/app/layout/tsa-layout-main/tsa-layout-main.component.scss
@@ -1375,6 +1375,7 @@ th.data-table {
 
 ul.nav-tabs li.active {
   background: $gray-50;
+  z-index:1000;
 }
 
 ul.nav-tabs li.active button {
@@ -1406,9 +1407,7 @@ ul.nav-tabs li button:hover {
 ul.nav-tabs li.active button .tab-icon {
   font-size: 1.6rem;
 }
-.nav{
-  z-index:10000 !important;
-}
+
 
 .fs-head-lock {
   font-size: 2rem;
